<resources>
    <string name="content_description" translatable="false">content</string>
    <string name="app_name" translatable="false">Alfanar Villa Room</string>
    <string name="empty" translatable="false" />
    <string name="language_turkish" translatable="false">Türkçe</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_arabic" translatable="false">عربى</string>
    <string name="gmt096" translatable="false">GMT-4</string>
    <string name="gmt097" translatable="false">GMT-3</string>
    <string name="gmt098" translatable="false">GMT-2</string>
    <string name="gmt099" translatable="false">GMT-1</string>
    <string name="gmt100" translatable="false">GMT0</string>
    <string name="gmt101" translatable="false">GMT+1</string>
    <string name="gmt102" translatable="false">GMT+2</string>
    <string name="gmt103" translatable="false">GMT+3</string>
    <string name="gmt104" translatable="false">GMT+4</string>
    <string name="zero" translatable="false">0</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="star" translatable="false">*</string>
    <string name="square" translatable="false">#</string>
    <string name="comma" translatable="false">,</string>
    <string name="open_weather_maps_app_id" translatable="false">137c0e033002d5861d923794c954ad32</string>
    <string name="two_dots" translatable="false">:</string>
    <string name="contact_no" translatable="false">NO</string>
    <string name="contact_nc" translatable="false">NC</string>
    <string name="short_line" translatable="false">-</string>
    <string name="zone_contact" translatable="false">Zone NO/NC</string>
    <string name="centigrade" translatable="false">°C</string>
    <string name="percent" translatable="false">%</string>
    <string name="dot" translatable="false">.</string>
    <string name="tone">Tone</string>
    <string name="doors">Doors</string>
    <string name="rooms">Rooms</string>
    <string name="settings">Settings</string>
    <string name="settings_lbldevsettings">Device Settings</string>
    <string name="settings_lblringettings">Ring Settings</string>
    <string name="settings_lbldevname">Device Name</string>
    <string name="settings_lblsleepoptions">Sleep Options</string>
    <string name="settings_lblsubled">Sub Leds</string>
    <string name="settings_lblsilentmode">Silent Mode</string>
    <string name="settings_lblabout">About</string>
    <string name="settings_lblfactoryreset">Factory Reset</string>
    <string name="settings_lbllanguages">Languages</string>
    <string name="settings_lbltimezones">Time Zones</string>
    <string name="factory_reset">This will erase all personal settings.\n Ringtones Settings, Themes, Sleep Options, Silent Mode, Languages, Time Zones, Passwords, Call Logs, Photos,Wake Up List etc. </string>
    <string name="calls_opendoor">Open Door</string>
    <string name="calls_takephoto">Take Photo</string>
    <string name="calls_answer">Answer</string>
    <string name="calls_close">Close</string>
    <string name="calls_ledonoff">Led On-Off</string>
    <string name="calls_calling">Calling</string>
    <string name="calls_connected">Connected</string>
    <string name="calls_dialling">Dialling</string>
    <string name="calls_incoming">Incoming Call</string>
    <string name="calls_outgoing">Outgoing Call</string>
    <string name="door_settings_door_name">Door Name</string>
    <string name="door_settings_set_master">Assign connected door to this device</string>
    <string name="camera_name">Camera Name</string>
    <string name="camera_ip">Camera IP</string>
    <string name="camera_username">UserName</string>
    <string name="camera_password">Password</string>
    <string name="enter_door_name">Door Name</string>
    <string name="network_settings">Network Settings</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="smart_not_ready">Smarthome feature not available yet.</string>
    <string name="not_supported">Not Supported.</string>
    <string name="item_room">ROOM</string>
    <string name="item_door">DOOR</string>
    <string name="check_input">Error! Check your input.</string>
    <string name="info">Info</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset">Reset</string>
    <string name="enter_password">Enter Password</string>
    <string name="device_name">Device Name</string>
    <string name="screen_settings">Screen Settings</string>
    <string name="date_time">Date and Time</string>
    <string name="manual">Manual</string>
    <string name="factory_set">Factory Settings</string>
    <string name="app_version">App Version</string>
    <string name="base_version">Base Version</string>
    <string name="fw_version">FW Version</string>
    <string name="ip_addr">IP Address</string>
    <string name="volume">Volume</string>
    <string name="ring_duration">Ring Duration (sec)</string>
    <string name="ring_door">Door Ringtone</string>
    <string name="ring_room">Room Ringtone</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="install_app">Install App</string>
    <string name="select_logo">Select Main Page Logo</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_camera_player">Camera Player</string>
    <string name="pass_enter4_char">Error!!!, pls enter 4 characters</string>
    <string name="logo_disabled">Logo disabled</string>
    <string name="unsupported_file">Unsupported file, Supported formats = (.jpeg - .jpg - .png)</string>
    <string name="device_busy_now">This device is busy right now.</string>
    <string name="door_opened">Door opened.</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Could not connect</string>
    <string name="answered">Call answered</string>
    <string name="declined">Call declined</string>
    <string name="call_answered">%s answered the %s call</string>
    <string name="call_declined">%s refused to %s call</string>
    <string name="call_missed">%s\'s call was not answered</string>
    <string name="delete">Delete</string>
    <string name="never_sleep">Never Sleep</string>
    <string name="sleep_2">2 minutes</string>
    <string name="sleep_5">5 minutes</string>
    <string name="sleep_10">10 minutes</string>
    <string name="sleep_30">30 minutes</string>
    <string name="network_time">Network Time</string>
    <string name="saving">Saving, please wait…</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="in_call">In call</string>
    <string name="updating">Updating</string>
    <string name="theme_change_light">Do you want to switch to the light theme?</string>
    <string name="theme_change_dark">Do you want to switch to the dark theme?</string>
    <string name="back_to_home">Back to home</string>
    <string name="parent_directory">Parent directory</string>
    <string name="file_not_contains_apk">The file you selected does not contain the apk extension!</string>
    <string name="error_occurred">An error occurred</string>
    <string name="device_busy">Device is busy</string>
    <string name="error_network_unreachable">NETWORK UNREACHABLE</string>
    <string name="app_updated">Your app updated…</string>
    <string name="mac_addr">Mac Address</string>
    <string name="zone_open_info_one">Please close the zones those are open.\n Zones :  </string>
    <string name="network_error">Router Control!!!, Please reboot your device.  </string>
    <string name="enable">Enable</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="contact">Contact</string>
    <string name="relay">Relay</string>
    <string name="active">Active</string>
    <string name="passive">Passive</string>
    <string name="scneraios">Scenarios</string>
    <string name="show">Show</string>
    <string name="notif_click">Click or swipe to see details</string>
    <string name="call_notif">You have %d call log</string>
    <string name="history_calls">History calls</string>
    <string name="alarm">Alarm settings</string>
    <string name="cameras">Cameras</string>
    <string name="rooms_doors">Rooms doors</string>
    <string name="smarthome">Smart home</string>
    <string name="gallery">Gallery</string>
    <string name="info_device_name">Alfanar Family</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="not_available">This feature not available yet.</string>
    <string name="alarm_notif">Alarm has occurred</string>
    <string name="initial_settings">Initial settings are applied…</string>
    <string name="ip_change">Changing ip address…</string>
    <string name="light_theme">Light Theme</string>
    <string name="settings_background_picture">Background:</string>
    <string name="set">SET</string>
    <string name="settings_sleep_options">Sleep Options</string>
    <string name="theme_settings">Theme settings</string>
    <string name="mac_address">Mac Address</string>
    <string name="internet">Internet</string>
    <string name="cpu_serial">CPU Serial</string>
    <string name="checking">Checking…</string>
    <string name="settings_timezones">Time Zones</string>
    <string name="weather_settings">Weather Settings</string>
    <string name="zones_cancel">All motion zones canceled.</string>
    <string name="alarm2">Alarm Set</string>
    <string name="alarm_inhome">In Home</string>
    <string name="alarm_outhome">Out Home</string>
    <string name="alarm_sleep">Sleep</string>
    <string name="alarm_cancel">Cancel</string>
    <string name="alarm_setting">Alarm Setting</string>
    <string name="alarm_settings_enable">Alarm Enabled</string>
    <string name="alarm_settings_disable">Alarm Disabled</string>
    <string name="alarm_relay_type">Alarm Relay Contact Type</string>
    <string name="alarm_relay_duration">Relay Duration(s)</string>
    <string name="alarm_siren_type">Siren Type</string>
    <string name="alarm_siren_duration">Siren Duration(s)</string>
    <string name="alarm_siren_notify">Alarm Armed/Failed Siren Notification</string>
    <string name="alarm_siren_trigger">Siren Trigger</string>
    <string name="alarm_conti">Continuous</string>
    <string name="alarm_internal">Internal</string>
    <string name="alarm_external">External</string>
    <string name="alarm_positive">Positive</string>
    <string name="alarm_negative">Negative</string>
    <string name="zone_setting">Zone Setting</string>
    <string name="alarm_zone_type">Zone Type</string>
    <string name="zone_motion">Motion Zone</string>
    <string name="zone_leak">Continuous Alert Zone</string>
    <string name="alarm_zone_name">Zone Name</string>
    <string name="alarm_occur_duration">Alarm Occur Duration(s)</string>
    <string name="alarm_arm_duration">Alarm Arm Duration(s)</string>
    <string name="alarm_relay_active">Relay Active</string>
    <string name="siren_active">Siren Active(when an alarm occurs)</string>
    <string name="alarm_mode">Mode</string>
    <string name="indoor_calling">Indoor Calling</string>
    <string name="smarthome_unlocked">Unlock the smart home to continue</string>
</resources>