<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
      >

    <include
        android:id="@+id/include_top"
        layout="@layout/bar_top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/include_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_top">

        <TextView
            android:id="@+id/txtInput"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_space_60"
            android:layout_marginStart="@dimen/dimen_space_5"
            android:layout_marginEnd="@dimen/dimen_space_5"
            android:background="@drawable/layer1"
            android:gravity="center_vertical"
            android:maxLength="4"
            android:text=""
            android:textSize="40sp" />


        <GridLayout
            android:id="@+id/keypad_gridlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:columnCount="3"
            android:rowCount="4">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@drawable/call_keypad_selector"
                android:gravity="center"
                android:text="@string/one"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@drawable/call_keypad_selector"
                android:gravity="center"
                android:text="@string/two"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@drawable/call_keypad_selector"
                android:gravity="center"
                android:text="@string/three"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@drawable/call_keypad_selector"
                android:gravity="center"
                android:text="@string/four"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@drawable/call_keypad_selector"
                android:gravity="center"
                android:text="@string/five"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@drawable/call_keypad_selector"
                android:gravity="center"
                android:text="@string/six"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@drawable/call_keypad_selector"
                android:gravity="center"
                android:text="@string/seven"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@drawable/call_keypad_selector"
                android:gravity="center"
                android:text="@string/eight"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@drawable/call_keypad_selector"
                android:gravity="center"
                android:text="@string/nine"
                android:textSize="30sp"
                android:textStyle="bold" />



            <ImageView
                android:id="@+id/btn_delete"
                android:padding="15dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:scaleType="fitCenter"
                android:background="@drawable/call_keypad_selector"
                android:src="@drawable/ic_delete_keypad"
                android:contentDescription="@string/content_description" />


            <Button
                android:id="@+id/btn_0"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@drawable/call_keypad_selector"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_square"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:background="@drawable/call_keypad_selector"
                android:gravity="center"

                android:textSize="30sp"
                android:textStyle="bold" />

        </GridLayout>


    </LinearLayout>


    <include
        android:id="@+id/include_bottom"
        layout="@layout/bar_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>