<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_call"
        android:gravity="center"
        android:layout_width="250dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/layer4"
        android:orientation="vertical">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:foregroundGravity="center"
            android:src="@drawable/ic_call"
            app:backgroundTint="@color/green"
            app:backgroundTintMode="src_over"
            android:tint="@color/white"
            app:fabCustomSize="35dp"
            app:maxImageSize="25dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/content_description" />

        <TextView
            android:id="@+id/notification_call_text"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_space_5"
            android:text="@string/call_notif"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:gravity="center"
            android:text="@string/notif_click"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

