<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_space_20"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/content_description"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_lock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:layout_marginStart="@dimen/dimen_space_5"
                    android:gravity="center|start"
                    android:text="@string/smarthome_unlocked"
                    android:textSize="21sp"
                    />
            </LinearLayout>



            <Button
                android:textStyle="bold"
                android:id="@+id/btnOk"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dimen_space_10"
                android:background="@drawable/layer3"
                android:gravity="center"
                android:text="@string/ok"
                android:textAllCaps="true"

                android:textSize="19sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>