<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    tools:context=".activities.intercom.IndoorRingActivity">



    <androidx.cardview.widget.CardView
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="visible"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/indoor_calling"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="@dimen/dimen_space_20"
                android:layout_marginEnd="@dimen/dimen_space_20"
                android:background="?attr/ColorDarkLight" />



            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_round_doorbell_24"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:contentDescription="@string/content_description" />


            <Button
                android:textStyle="bold"
                android:id="@+id/btnOk"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/dimen_space_10"
                android:layout_marginBottom="@dimen/dimen_space_10"
                android:background="@drawable/layer3"
                android:gravity="center"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textSize="19sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>